# wiqd-hackathon-2026

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
website/: events.json  main.py  myths.json  questions.json
website/static/css/: custom.css
website/templates/: account.html  admin.html  arqiv.html  base.html  contact.html  index.html  myths.html  new_question.html  schedule.html
