[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[project]
name = "wiqd-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Florian-Heringa",email = "florianheringa@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "jinja2",
    "uvicorn[standard]",
    "python-multipart"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
